# histd

./: CMakeLists.txt  LICENSE  README.md  debug.cpp  hppx.h  std11.hpp  std14.hpp  std14_test.cpp  std17.hpp  std20.hpp  std20_test.cpp  type.hpp
include/histd/: histd.hpp  std11.hpp  std14.hpp  std17.hpp  std20.hpp
log/: log_printf.c  log_printf.h  log_spdlog.cpp  log_spdlog.hpp  source_location.h
